Network-Policy/api-allow-5000.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow-5000
spec:
  podSelector:
    matchLabels:
      app: apiserer
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: monitoring
    ports:
      - port: 5000
