Network-Policy/deny-all-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name:  web-deny-all
spec:
  podSelector:
    matchLabels:
      app: web
  ingress: []
