Network-Policy/limit-traffic-to-application.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow
spec:
  podSelector:
    matchLabels:
      app: bookstore
      role: api
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: bookstore
