Network-Policy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
spec:
  podSelector:
    matchLabels:
      role: internal
  policyTypes:
    - Egress
    egress:
      - to:
          - podSelector:
              matchLabels:
                role: mysql
          ports:
            - protocol: TCP
              port: 3306
      - to:
          - podSelector:
              matchLabels:
                role: payroll
          ports:
            - protocol: TCP
              port: 8080
