Network-Policy/redis-allow-service.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: redis-allow-services
spec:
  podSelector:
    matchLabels:
      app: bookstore
      role: db
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: bookstore
            role: search
      - podSelector:
          matchLabels:
            app: bookstore
            role: search
